--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -25,6 +25,7 @@
     "@loopback/http-server": "^1.1.12",
     "@loopback/openapi-v3": "^1.3.4",
     "@loopback/openapi-v3-types": "^1.0.12",
+    "@loopback/express-middleware": "^1.0.0-1",
     "@types/body-parser": "^1.17.0",
     "@types/cors": "^2.8.3",
     "@types/express": "^4.11.1",
