--- a/examples/rpc-server/package.json
+++ b/examples/rpc-server/package.json
@@ -9,6 +9,8 @@
   "engines": {
     "node": ">=8.9"
   },
+  "main": "index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build:apidocs": "lb-apidocs",
     "build": "lb-tsc es2017 --outDir dist",
