--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "coverage:ci": "node packages/build/bin/run-nyc report --reporter=text-lcov | coveralls",
     "precoverage": "npm test",
     "coverage": "open coverage/index.html",
-    "lint": "npm run prettier:check && npm run tslint",
+    "lint": "npm run prettier:check && npm run tslint && node bin/check-package-locks",
     "lint:fix": "npm run tslint:fix && npm run prettier:fix",
     "tslint": "node packages/build/bin/run-tslint --project tsconfig.json",
     "tslint:fix": "npm run tslint -- --fix",
