--- a/docs/site/sidebars/lb4_sidebar.yml
+++ b/docs/site/sidebars/lb4_sidebar.yml
@@ -141,6 +141,10 @@ children:
     url: Controllers.html
     output: 'web, pdf'
 
+  - title: 'Interceptors'
+    url: Interceptors.html
+    output: 'web, pdf'
+
   - title: 'DataSources'
     url: DataSources.html
     output: 'web, pdf'
