--- a/docs/site/sidebars/lb4_sidebar.yml
+++ b/docs/site/sidebars/lb4_sidebar.yml
@@ -258,6 +258,10 @@ children:
     url: Self-hosted-rest-api-explorer.html
     output: 'web, pdf'
 
+  - title: 'Boot and Mount a LoopBack 3 Application'
+    url: Boot-and-Mount-a-LoopBack-3-application.html
+    output: 'web, pdf'
+
 - title: 'Calling other APIs'
   url: Calling-other-APIs-and-web-services.html
   output: 'web, pdf'
