--- a/packages/booter-lb3app/package.json
+++ b/packages/booter-lb3app/package.json
@@ -22,20 +22,28 @@
     "debug": "^4.1.1",
     "loopback-swagger": "^5.7.2",
     "p-event": "^4.1.0",
-    "swagger2openapi": "^5.2.5"
+    "swagger2openapi": "^5.2.5",
+    "loopback": "^3.25.1",
+    "loopback-boot": "^2.28.0",
+    "compression": "^1.7.4",
+    "helmet": "^3.16.0",
+    "loopback-component-explorer": "^6.3.1"
   },
   "peerDependencies": {
-    "@loopback/boot": "^1.1.2",
-    "@loopback/core": "^1.2.1",
-    "@loopback/rest": "^1.9.1"
+    "@loopback/boot": "^1.1.3",
+    "@loopback/core": "^1.3.0",
+    "@loopback/rest": "^1.10.0"
   },
   "devDependencies": {
-    "@loopback/boot": "^1.1.2",
-    "@loopback/core": "^1.2.1",
-    "@loopback/build": "^1.4.0",
-    "@loopback/rest": "^1.9.1",
-    "@loopback/testlab": "^1.2.1",
-    "@loopback/tslint-config": "^2.0.3",
+    "@loopback/boot": "^1.1.3",
+    "@loopback/core": "^1.3.0",
+    "@loopback/context": "^1.9.0",
+    "@loopback/build": "^1.4.1",
+    "@loopback/repository": "^1.3.0",
+    "@loopback/rest": "^1.10.0",
+    "@loopback/rest-explorer": "^1.1.14",
+    "@loopback/testlab": "^1.2.2",
+    "@loopback/tslint-config": "^2.0.4",
     "@types/node": "^10.11.2"
   },
   "keywords": [
